# aided

./: .gitignore  .pylintrc  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.github/: build.yml  tests.yml
.github/workflows/: gha.yml
aided/: __init__.py  constants.py
aided/core/: __init__.py  edrep.py  edwfn.py  edwfns.py
contrib/test/: validation.txt
examples/analyze_bcps/: analyze_bcps.py  output.txt
examples/bader_surface/: C2.txt  H1.txt  H4.txt  H5.txt  N3.txt  O6.txt  bader_surface.py  speeds.txt
examples/grid_analysis/: grad.txt  grid_analysis.py  rho.txt  speeds.txt
gha_scripts/: coverage_pytest.sh  pylint.sh
src/: CMakeLists.txt
src/aided/: __init__.py  __main__.py  cli.py  version.py
src/aided/core/: EDRep.py  EDWfn.py  __init__.py  edrep.py  edwfn.py  edwfns.py  units.py
src/aided/core/wfn/: wfn_rep.py  wfns_rep.py
src/aided/fio/: __init__.py  read_wfn.py  read_wfn_file.py  utils.py
src/aided/fio/read_wfn/: __main__.py  read_wfn.py
src/aided/io/: read_wfn.py  utils.py
src/aided/math/: geometry.py  primitives.py
src/core/: edwfn_bindings.cpp
src/math/: primitives.h  primitives_bindings.cpp
src/pybind_utils/: pybind_utils.h
test/: run_tests.sh
test/speed_tests/: run_speed_tests.sh
test/speed_tests/core/: edwfn_test.py
test/unit_tests/: cli_test.py  helper.py
test/unit_tests/core/: edrep_test.py  edwfn_test.py  edwfns_test.py
test/unit_tests/io/: read_wfn_test.py
test/unit_tests/math/: primitives_test.py
